fix anchors and spacing

--- a/src/assets/scss/livepage/index.scss
+++ b/src/assets/scss/livepage/index.scss
@@ -98,8 +98,9 @@ ul#menu {
 }
 
 .row {
+  margin-top: 5%;
   padding: 5%;
-  clear: both;
+  overflow: auto;
 }
 
 img {
